--- a/demo001.html
+++ b/demo001.html
@@ -179,6 +179,7 @@
 
     <button id="download-pdf">Download as PDF (Auto Scale)</button>
     <button id="download-pdf-custom">Download as PDF (Custom Scale)</button>
+    <button id="download-pdf-exact">Download as PDF (1:1 Scale)</button>
 
     <!-- Load the new PDF library -->
     <script src="html-to-pdf.js"></script>
@@ -230,6 +231,7 @@
         const reportEl = document.getElementById('content-to-print');
         const downloadBtn = document.getElementById('download-pdf');
         const downloadBtnCustom = document.getElementById('download-pdf-custom');
+        const downloadBtnExact = document.getElementById('download-pdf-exact');
 
         async function handleDownload(button, options) {
             if (!button || !reportEl) return;
@@ -263,6 +265,14 @@
                 // This makes jsPDF scale it up to fit the PDF page width.
                 windowWidth: 1400, // A higher value makes the content appear smaller.
                 scale: 0.5 // A higher value increases quality and size.
+            });
+        });
+
+        // Button 3: Exact 1:1 scaling
+        downloadBtnExact.addEventListener('click', () => {
+            handleDownload(downloadBtnExact, {
+                filename: 'Business_Report_Exact_Scale.pdf',
+                usePageSizeFromHtml: true
             });
         });
     </script>
