--- a/demo002.html
+++ b/demo002.html
@@ -189,6 +189,8 @@
 
     <button id="download-pdf">Download as PDF</button>
 
+    <script src="jspdf.umd.min.js"></script>
+    <script src="html2canvas.min.js"></script>
     <script src="html-to-pdf.js"></script>
     <script>
         const downloadBtn = document.getElementById('download-pdf');
